[#1543] Fix a jQuery UI / Bootstrap compatibility problem
Each time a jQuery UI dialog was manually resized,
a margin was added to the right of its scrollbar.

--- a/prewikka/htdocs/css/style.less
+++ b/prewikka/htdocs/css/style.less
@@ -614,6 +614,7 @@ div.prewikka-view-config {
 
 .ui-dialog {
     position: fixed;
+    box-sizing: content-box; /* Bootstrap compatibility */
 
     .container {
         width: 100%;
@@ -643,6 +644,11 @@ div.prewikka-view-config {
     .ui-dialog-titlebar {
         padding-right: 0;
     }
+
+    .ui-dialog-content {
+        box-sizing: content-box; /* Bootstrap compatibility */
+    }
+
 }
 
 .ui-dialog a {
